# wamca-gpu-mi

./: .bazelrc  .clang-tidy  .cproject  .gitignore  .gitmodules  .project  BUILD.bazel  CMakeLists.txt  GeneralizationKernel.cu  README.md  WORKSPACE  contributors.txt  cuda.BUILD  makefile
.devcontainer/: Dockerfile  devcontainer.json
Release/: .gitignore  makefile  objects.mk  sources.mk  wamca2016
Release-GPU01/: .gitignore  objects.mk
Release-GPU01/source/: except.d  log.d  mlkswap.d  mlkutil.d  mlproblem.d  mlsolution.d  utils.d
Release-cuda-8.0/: .gitignore  makefile
Release-cuda-8.0/source/: subdir.mk  subdir.mk.backup
Release/source/: except.d  log.d  main.d  mlads.d  mlgputask.d  mlk2opt.d  mlkernel.d  mlkoropt.d  mlkswap.d  mlkutil.d  mlparser.d  mlproblem.d  mlsearch.d  mlsolution.d  mlsolver.d  mltask.d  mtrand.d  subdir.mk  tsplib.d  utils.d
example/: BUILD.bazel  kernel.cu  kernel.h  main.cpp
instances/: 04_lin318.tsp  05_TRP-S500-R1.tsp  06_d657.tsp  07_rat784.tsp  08_TRP-S1000-R1.tsp  a280.tsp  d18512.tsp  eil51.tsp  eil76.tsp  nrw1379.tsp  p654.tsp  pr1002.tsp  pr107.tsp  pr124.tsp  pr136.tsp  pr144.tsp  pr152.tsp  pr76.tsp  rat195.tsp  rat575.tsp  rat99.tsp  rl5915.tsp  rl5934.tsp  ts225.tsp  tsp225.tsp  u1432.tsp  u159.tsp  u2152.tsp  u574.tsp  u724.tsp  vm1084.tsp
instances/bigger/: rl11849.tsp  u1060.tsp  u1817.tsp  u2319.tsp  usa13509.tsp  vm1748.tsp
results/: results-inst100.txt  results-inst1000-bug-or1.txt  results-inst1000.txt  results-inst226.txt  results-inst300.txt  results-inst500.txt  results-inst600.txt  results-inst700.txt
source/: WamcaExperiment.hpp  consts.h  debug.h  directives.h  dvnd.cpp  dvnd.cu  dvnd.cuh  dvnd.h  except.cpp  except.h  gpu.h  graph.hpp  log.cpp  log.h  main.cpp  main.cu  mlads.cpp  mlads.h  mlgputask.cpp  mlgputask.h  mlk2opt.cu  mlk2opt.h  mlkernel.cpp  mlkernel.cu  mlkernel.h  mlkoropt.cu  mlkoropt.h  mlkswap.cu  mlkswap.h  mlkutil.cu  mlparams.h  mlparser.cpp  mlparser.h  mlproblem.cpp  mlproblem.h  mlqueue.hpp  mlsearch.cpp  mlsearch.h  mlsolpool.hpp  mlsolution.cpp  (+13 more)
source/cuda/: gpu.h.bak  gpu_helper.h  smatrix.hpp  vector.hpp
tests/: MyKernel.Test.cu  TestKernel.cu  TestKernel.cuh  WamcaExperiment.Test.cpp  makefile  mlproblem.Test.cpp  mlsolution.Test.cpp  mtrand.Test.cpp  wamca2016.Test.cpp  wamca2016cuda.Test.cu
